# alifib

./: .gitignore  AGENTS.md  Cargo.toml  INTERACTIVE.md  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  TESTING.md  bench.py  dune-project  package-lock.json
.claude/: CLAUDE.md  settings.local.json
.claude/notes/: CONCEPTS.md  THREADS.md
.github/workflows/: deploy.yml
_rust-old/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
crates/alifib/: Cargo.toml
crates/alifib-core/: Cargo.toml
crates/alifib-trs/: Cargo.toml
docs/: CONCEPTS.md  DEMO.md  GRAMMAR.md  HOMOLOGY.md  INTERACTIVE.md  InterpreterDescription.md  SMOKE.md  TESTING.md  grammar-alex.md  grammar.md  interpreter-data-summary.md  interpreter-desc.txt  notes.md  notes1.md  tutorial.md
docs/drafts/: popl-traces.tex
docs/interp/: .gitignore  .latexmkrc  alifib_lexer.py  interp.tex  macros.sty  setup.py
docs/quartz/: quartz.config.ts
docs/wiki/: CLAUDE.md  index.md  log.md  source-drift.md
editors/vscode/: INSTALL.md  package.json
examples/: Bicategory.ali  Bicategory_aux.ali  Bicategory_examples.ali  BinaryNat.ali  BinaryNat_Term.ali  Braid.ali  Braided_Monoidal.ali  Braided_Monoidal_aux.ali  Category.ali  Channel.ali  Corridor.ali  Dblcat.ali  Delta.ali  Delta_0.ali  Delta_complexes.ali  DiningPhilosophers.ali  EckmannHilton.ali  F2Linear.ali  Frobenius.ali  Hole.ali  Hole_examples.ali  LambdaSigma.ali  LambdaSigma_Term.ali  Lambda_Term.ali  Magma.ali  Monoidal.ali  Monoidal_aux.ali  Monoidal_examples.ali  Peterson.ali  Philosophers.ali  PhilosophersRing.ali  Protocols.ali  Races.ali  SKI.ali  SKI_Term.ali  Semisimplicial.ali  Semisimplicial_examples.ali  ShapeOfConcurrency.ali  String.ali  Symmetric_Monoidal.ali  (+8 more)
examples/TRS/: Aux.ali
legacy/examples/: EckmannHilton.ali  F2Linear.ali  Homology.ali  Mutex.ali  SKI_legacy.ali  Theory.ali  Tutorial.ali
legacy/ocaml/: .gitignore
ocaml/docs/: notes1.md
ocaml/examples/: Empty.ali  Empty2.ali  Magma.ali  Semigroup.ali  Tutorial.ali
ocaml/src/: dune  main.ml
plugins/trs/: Cargo.toml  README.md
rust/: Cargo.toml
rust/docs/: grammar.md  interpreter-data-summary.md
rust/examples/: Category.ali  EH.ali  EH_solved.ali  Empty.ali  Frobenius.ali  Semigroup.ali  Theory.ali  Tutorial.ali  YangBaxter.ali
rust/scripts/: bench.py
rust/src/: main.rs
scripts/: bench.py  bench_auto.sh  bench_rewrite.sh  build_examples_manifest.py  demo.sh  smoke.sh
src/: codegen.rs  dune  lib.rs  main.ml  main.rs  tests.rs
src-rust/: Cargo.toml
src-rust/src/: main.rs
src-rust/src/core/: complex.rs  diagram.rs  mod.rs  morphism.rs  ogposet.rs  state.rs
src-rust/src/helper/: error.rs  id.rs  mod.rs  positions.rs
src-rust/src/interpreter/: interpreter.rs  mod.rs  session.rs
src-rust/src/language/: ast.rs  ast_pp.rs  diagnostics.rs  lexer.rs  mod.rs
src-rust2/: Cargo.toml
src-rust2/docs/: grammar.md
src-rust2/examples/: Category.ali  EckmannHilton.ali  Empty.ali  Magma.ali  Semigroup.ali  Theory.ali  YangBaxter.ali
src-rust2/src/: main.rs
src/analysis/: homology.rs  mod.rs  strdiag.rs
src/aux/: error.rs  graph.rs  id.rs  loader.rs  mod.rs  path.rs
src/core/: bitset.rs  complex.ml  complex.mli  complex.rs  diagram.ml  diagram.mli  diagram.rs  dune  embeddings.rs  flow.rs  graph.rs  homology.rs  id.ml  id.mli  intset.rs  map_hole.rs  (+14 more)
tests/: cli_render.rs  fill.rs  golden_examples.rs  interpreter.rs  web_fill.rs
trs/: ari2ali.ts  encode.ts  generate.ts  main.ts  package-lock.json  package.json  parse.ts  tsconfig.json  types.ts
trs-rs/: Cargo.toml
vscode-syntax/: README.md
web/: EXAMPLES.md
web/mcp/: Cargo.toml
web/mcp/src/: lib.rs
web/mcp/tests/: handshake.rs
web/server/: Cargo.toml  build.rs
web/server/src/: lib.rs
web/server/tests/: bundled_modules.rs
web/wasm/: Cargo.toml
web/wasm/src/: lib.rs
(+298 files in other folders)
