[workspace]
members = ["plugins/trs"]

[workspace.dependencies]
alifib = { path = "." }

[package]
name = "alifib"
version = "0.1.0"
edition = "2024"

[features]
default = ["cli"]
cli = ["dep:rustyline"]

[dependencies]
ariadne = "0.6.0"
chumsky = "0.12.0"
indexmap = "2"
rustyline = { version = "14", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
