[workspace]
members = ["cli", "plugins/trs", "web/server", "web/shared"]
# Running `cargo build` / `cargo run` / `cargo test` from the workspace root
# defaults to the CLI binary + its transitive deps.  Plugins and web crates
# still build on explicit request (e.g. `cargo build --workspace`).
default-members = ["cli"]

[workspace.dependencies]
alifib = { path = "." }

[package]
name = "alifib"
version = "0.1.0"
edition = "2024"

[lib]

[features]
default = []
cli = ["dep:rustyline"]

[dependencies]
ariadne = "0.6.0"
chumsky = "0.12.0"
indexmap = "2"
rustyline = { version = "14", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
