[package]
name = "alifib"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "alifib"
path = "src/main.rs"

[dependencies]
chumsky = "0.9"
ariadne = "0.4"
mimalloc = { version = "0.1", default-features = false }

[profile.release]
opt-level = 3

[profile.release-debug]
inherits = "release"
debug = true
