[package]
name = "alifib-web-mcp"
version = "0.1.0"
edition = "2024"
description = "Model Context Protocol server exposing the alifib interpreter to LLM agents."

[lib]

[dependencies]
alifib = { path = "../..", default-features = false }
alifib-web-shared = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
