[package]
name = "alifib-web-server"
version = "0.1.0"
edition = "2024"
description = "Localhost HTTP server for the alifib browser GUI."

[lib]

[dependencies]
alifib = { path = "../..", default-features = false }
alifib-web-shared = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
