# This crate is intentionally NOT a workspace member — it is built separately
# via wasm-pack and does not affect `cargo build/test` at the repo root.
[workspace]

[package]
name = "alifib-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the alifib rewrite engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
alifib = { path = "../..", default-features = false }
alifib-web-shared = { path = "../shared" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
